Fix alignment in NavBar.css by changing 'align-items' from 'start' to 'flex-start' for improved layout consistency.

--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -68,7 +68,7 @@
 
   .menu-line{
       display: flex;
-      align-items: start;
+      align-items: flex-start;
       border: 1px solid #f49818;
       width: 25px;
   }
